src/style/globals.css
@import "tailwindcss";
@import "./base/_keyframes.css";
@import "./base/_reset.css";

@theme {
  --color-navbar: #171821;
  --color-notification-success: #2f9e44;
  --color-notification-error: #e03131;
  --color-red-light: #f03e3e;
  --color-line: #2C2D33;
  --color-section: #21222D;
  --color-navbar-light: #23242B;
}

:root {
  --background: #ffffff;
  --foreground: #171717;
  --skeleton-highlight: #f1f3f7;
  --skeleton-base: #e6e9ef;
  --animation-duration: 1.5s;
  
  --placeholder-gradient-color: #d9d9d9;
  --placeholder-image: linear-gradient(to right, #ebebeb 0, var(--placeholder-gradient-color) 15%, #ebebeb 30%);
  --placeholder-size: 1200px 100%;
  --placeholder-animation: placeholderAnimation 2s linear infinite;

  --shake-animation: shake 820ms .5ms cubic-bezier(.36, .07, .19, .97) both;
}

@theme inline {
  --color-background: var(--background);
  --color-foreground: var(--foreground);
  --font-sans: var(--font-poppins);
}

@media (prefers-color-scheme: dark) {
  :root {
    --background: #171821;
    --foreground: #ededed;
  }
}

body {
  background: var(--background);
  color: var(--foreground);
  @apply font-sans;
}

h1 {
  font-size: 28px;
}

.Button {
  display: inline-block;
  border: 1px solid var(--foreground);
  padding: 4px 8px;
  border-radius: 6px;
  transition: all 0.3s;
  cursor: pointer;
  height: max-content;
}

.Button:hover {
  @apply bg-navbar;
}

.Section {
  @apply bg-section py-4 px-8 rounded-lg;
}

h2 {
  @apply text-xl;
}

@keyframes shimmer {
  0% {
      transform: translateX(-100%);
  }
  100% {
      transform: translateX(100%);
  }
}

/* Skeleton loader for smooth placeholder pulses */
.skeleton {
  background-image: var(--placeholder-image);
  background-size: var(--placeholder-size);
  animation: var(--placeholder-animation);
  border-radius: 8px;
}

.hover-underline,
.hover-underline_red {
  position: relative;
}

.hover-underline::after,
.hover-underline_red::after {
  content: "";
  position: absolute;
  bottom: 0;
  left: 50%;
  width: 0;
  height: 1px;
  transition: all 0.3s;
}

.hover-underline::after {
  @apply bg-white;
}

.hover-underline_red::after {
  @apply bg-red-400;
}

.hover-underline:hover::after,
.hover-underline_red:hover::after {
  width: 100%;
  left: 0;
}

.icon {
  @apply w-6 h-6;
}

.Navbar::before {
    @apply content-[''] absolute left-0 top-0 bg-navbar w-full h-full z-2;
}

